Reviews with long words no longer overflow. Fixes #121

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -106,4 +106,5 @@ video#mainVideo {
 
 .markdown-preview {
   word-wrap: break-word;
+  word-break: break-all;
 }
